--- a/dog.html
+++ b/dog.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>קוביה ב-JS</title>
+  <style>
+        body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 50px;
+    }
+
+    .dice-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 20px;
+    }
+
+    .dice {
+      width: 100px;
+      height: 100px;
+      background-color: #fff;
+      border: 3px solid #000;
+      border-radius: 10px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      gap: 5px;
+      padding: 10px;
+      box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
+    }
+
+    .dot {
+      width: 15px;
+      height: 15px;
+      background-color: #000;
+      border-radius: 50%;
+      margin: auto;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+    <h1>🎲זריקת קוביות</h1>
+  <div class="dice-container">
+    <div id="dice1" class="dice"></div>
+    <div id="dice2" class="dice"></div>
+  </div>
+  <button onclick="rollDice()">זרוק קוביות</button>
     <script src="dog.js"></script>
 
 </body>
